<resources>
    <string name="app_name">BuscoKsa</string>
    <string name="facebook_app_id">2415364648490623</string>
    <string name="fb_login_protocol_scheme">fb2415364648490623</string>
    <string name="open_nav">Open navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="favorite">Favorites</string>
    <string name="search">Search</string>
    <string name="system">System</string>
    <string name="settings">Settings</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="help">Help</string>
    <string name="login">Login</string>
    <string name="main_price">price</string>
    <string name="main_neighborhood">neighborhood</string>
    <string name="main_rooms">Rooms:</string>
    <string name="detail_rooms">Rooms:</string>
    <string name="detail_bathrooms">Bathrooms:</string>
    <string name="detail_garage">Garage:</string>
    <string name="detail_mts">m²:</string>
    <string name="detail_balcony">Balcony:</string>
    <string name="detail_garden">Garden:</string>
    <string name="detail_title">Title:</string>
    <string name="detail_barbecue">Barbecue:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="item_price">Price:</string>
    <string name="item_neighborhood">Neighborhood:</string>
    <string name="item_rooms">Rooms:</string>
    <string name="search_title">Search</string>
    <string name="search_filter">Filter</string>
    <string name="detail_price">Price:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="detail_neighborhood">Neighborhood:</string>
    <string name="dialogfragment">MyDialogFragment</string>
    <string name="filter_apply">Apply</string>
    <string name="filter_cancel">X</string>
    <string name="filter_garage">Garage</string>
    <string name="filter_barbecue">Barbecue</string>
    <string name="menu_view">Layout View</string>
</resources>
