<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".fragment.HouseDetailFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="5">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycledView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/detail_title" />

            <TextView
                android:id="@+id/txt_detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_price" />

            <TextView
                android:id="@+id/txt_dims"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_mts" />

            <TextView
                android:id="@+id/txt_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_rooms" />

            <TextView
                android:id="@+id/txt_bath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_bathrooms" />

            <TextView
                android:id="@+id/txt_garage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_garage" />

            <TextView
                android:id="@+id/txt_balcony"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_balcony" />

            <TextView
                android:id="@+id/txt_garden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_garden" />

            <TextView
                android:id="@+id/txt_barbecue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_barbecue" />

        </LinearLayout>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:layout_weight="1" />
    </LinearLayout>
</ScrollView>