<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filter"
        android:icon="@drawable/baseline_tune_24"
        android:title="@string/search_filter"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/layoutView"
        android:icon="@drawable/baseline_dashboard_24"
        android:title="@string/menu_view"
        app:showAsAction="collapseActionView|ifRoom" />
</menu>