<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    android:layout_width="match_parent"
    android:elevation="5dp"
    android:layout_height="240dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_house"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:padding="4dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/white_transparent_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/img_house">

            <TextView
                android:id="@+id/txt_price"
                android:text="@string/main_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_neighborhood"
                android:text="@string/main_neighborhood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_rooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_rooms" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.913"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_house"
            app:layout_constraintVertical_bias="0.155"
            app:srcCompat="@drawable/baseline_favorite_border_white_24dp" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>